# api/handlers/vaa/model.go
@@ -15,16 +15,17 @@ const (
 
 // VaaDoc defines the JSON model for VAA objects in the REST API.
 type VaaDoc struct {
-	ID               string      `bson:"_id" json:"id"`
-	Version          uint8       `bson:"version" json:"version"`
-	EmitterChain     vaa.ChainID `bson:"emitterChain" json:"emitterChain"`
-	EmitterAddr      string      `bson:"emitterAddr" json:"emitterAddr"`
-	Sequence         string      `bson:"sequence" json:"-"`
-	GuardianSetIndex uint32      `bson:"guardianSetIndex" json:"guardianSetIndex"`
-	Vaa              []byte      `bson:"vaas" json:"vaa"`
-	Timestamp        *time.Time  `bson:"timestamp" json:"timestamp"`
-	UpdatedAt        *time.Time  `bson:"updatedAt" json:"updatedAt"`
-	IndexedAt        *time.Time  `bson:"indexedAt" json:"indexedAt"`
+	ID                string      `bson:"_id" json:"id"`
+	Version           uint8       `bson:"version" json:"version"`
+	EmitterChain      vaa.ChainID `bson:"emitterChain" json:"emitterChain"`
+	EmitterAddr       string      `bson:"emitterAddr" json:"emitterAddr"`
+	EmitterNativeAddr string      `json:"emitterNativeAddr,omitempty"`
+	Sequence          string      `bson:"sequence" json:"-"`
+	GuardianSetIndex  uint32      `bson:"guardianSetIndex" json:"guardianSetIndex"`
+	Vaa               []byte      `bson:"vaas" json:"vaa"`
+	Timestamp         *time.Time  `bson:"timestamp" json:"timestamp"`
+	UpdatedAt         *time.Time  `bson:"updatedAt" json:"updatedAt"`
+	IndexedAt         *time.Time  `bson:"indexedAt" json:"indexedAt"`
 	// TxHash is an extension field - it is not present in the guardian API.
 	TxHash *string `bson:"txHash" json:"txHash,omitempty"`
 	// AppId is an extension field - it is not present in the guardian API.
