# api/routes/wormscan/transactions/models.go
@@ -15,20 +15,24 @@ const (
 
 // TransactionOverview is a brief description of a transaction (e.g. ID, txHash, status, etc.).
 type TransactionOverview struct {
-	ID                 string      `json:"id"`
-	Timestamp          time.Time   `json:"timestamp"`
-	TxHash             string      `json:"txHash,omitempty"`
-	OriginAddress      string      `json:"originAddress,omitempty"`
-	OriginChain        sdk.ChainID `json:"originChain"`
-	DestinationAddress string      `json:"destinationAddress,omitempty"`
-	DestinationChain   sdk.ChainID `json:"destinationChain,omitempty"`
-	TokenAmount        string      `json:"tokenAmount,omitempty"`
-	UsdAmount          string      `json:"usdAmount,omitempty"`
-	Symbol             string      `json:"symbol,omitempty"`
-	Status             TxStatus    `json:"status"`
+	ID            string      `json:"id"`
+	Timestamp     time.Time   `json:"timestamp"`
+	TxHash        string      `json:"txHash,omitempty"`
+	OriginAddress string      `json:"originAddress,omitempty"`
+	OriginChain   sdk.ChainID `json:"originChain"`
+	// EmitterAddress contains the VAA's emitter address, encoded in hex.
+	EmitterAddress string `json:"emitterAddress"`
+	// EmitterNativeAddress contains the VAA's emitter address, encoded in the emitter chain's native format.
+	EmitterNativeAddress string      `json:"emitterNativeAddress,omitempty"`
+	DestinationAddress   string      `json:"destinationAddress,omitempty"`
+	DestinationChain     sdk.ChainID `json:"destinationChain,omitempty"`
+	TokenAmount          string      `json:"tokenAmount,omitempty"`
+	UsdAmount            string      `json:"usdAmount,omitempty"`
+	Symbol               string      `json:"symbol,omitempty"`
+	Status               TxStatus    `json:"status"`
 }
 
 // ListTransactionsResponse is the "200 OK" response model for `GET /api/v1/transactions`.
 type ListTransactionsResponse struct {
-	Transactions []TransactionOverview `json:"transactions"`
+	Transactions []*TransactionOverview `json:"transactions"`
 }
